manifests/demos/kuard/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-svc
  labels:
    app: kuard
spec:
  selector:
    app: kuard
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    targetPort: http
    port: 8080
