manifests/demos/kuard/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kuard
  namespace: kuard
spec:
  host: kuard.kube.devinforyou.com
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: kuard-svc
